--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 <style>
 body {background-color: black;}
 h1   {color: red;}
+h2   {color: red;}
 p    {color: red;}
 </style>
 </head>
 
 <body>
 <h1>F/X/C/K/L/I/F/E/W/E/B/S/I/T/E</h1>
+<h2>FUCK MY LIFE IT SUCKS DEEP INSIDE KEEP MY SECRET SAFE</h2>
 </body>
 </html>
